--- a/frontend/src/assets/styles/cmps/_app-player.scss
+++ b/frontend/src/assets/styles/cmps/_app-player.scss
@@ -4,7 +4,6 @@
     height: 89px;
     bottom: 0;
     justify-content: space-between;
-    // position: fixed;
     width: 100%;
 }
 
@@ -14,9 +13,11 @@
 
 
 .song-details {
-    // background-color: rgb(164, 53, 72);
-    // justify-content: flex-start;
+    margin-left: 5px;
     align-items: center;
+    display: flex;
+    width:250px;
+    overflow: hidden;
 
     & .song-img {
         border: 0px;
@@ -67,7 +68,9 @@
 
 .player-range-action {
     width: rem(505px);
-    margin-bottom: rem(15px);
+    margin-top: 10px;
+    margin-left: 3px;
+    // margin-bottom: rem(10px);
 }
 
 .btn-action-player {
@@ -88,7 +91,7 @@
 }
 
 .volume-icon {
-    font-size: rem(13.333px);
+    // font-size: rem(5px);
     background-color: transparent;
 }
 
