improve inpur search

--- a/frontend/src/assets/styles/cmps/_app-create-station.scss
+++ b/frontend/src/assets/styles/cmps/_app-create-station.scss
@@ -19,3 +19,14 @@
         margin-left: 36px;
     }
 }
+
+.create-station-search-input {
+
+    margin-left: 32px !important;
+    border-radius: 6px !important;
+
+    background-color: $bgcplaylistup;
+
+    margin-bottom: 50px;
+    // margin-top: 12px;
+}
