--- a/frontend/src/assets/styles/cmps/_app-header.scss
+++ b/frontend/src/assets/styles/cmps/_app-header.scss
@@ -3,10 +3,11 @@
     background-color: $bgcmain;
     grid-area: app-header;
     grid-column: 2 / -1;
+    z-index: 10;
+    opacity: 80%;
 }
 
 .app-header {
-    opacity: 90%;
     display: flex;
     height: rem(64px);
     width: 100%;
