--- a/frontend/src/assets/styles/cmps/_app-header.scss
+++ b/frontend/src/assets/styles/cmps/_app-header.scss
@@ -80,6 +80,7 @@ svg.search-key {
     font-size: rem(14px);
     width: rem(250px);
     background-color: transparent;
+    outline: transparent;
     border: 0px solid;
     margin-left: 12px;
     margin-top: 12px;
