--- a/frontend/src/assets/styles/cmps/_app-player.scss
+++ b/frontend/src/assets/styles/cmps/_app-player.scss
@@ -132,6 +132,10 @@
     -webkit-appearance: none;
 }
 
+.fa-volume-high{
+    font-size: 17px;
+}
+
 .player-video {
     height: 1px;
     opacity: 0;
