--- a/frontend/src/assets/styles/cmps/_song-list.scss
+++ b/frontend/src/assets/styles/cmps/_song-list.scss
@@ -4,13 +4,14 @@
     background-color: inherit; 
     // background-image: linear-gradient(rgb(5, 5, 20),black);
 
-    & .create{
-    }
 
-    &.header-song-list {
-        // grid-template-columns: 3fr 20fr 5fr 5fr 7.5fr;
-        grid-template-columns: 1fr 20fr 5fr 5fr 1fr 5.5fr 1fr;
-    }
+    // &.header-song-list {
+    //     // grid-template-columns: 3fr 20fr 5fr 5fr 7.5fr;
+
+    //     font-size: calc(13px);
+    //     grid-template-columns: 1fr 15fr 9fr 5fr 1fr 5.5fr 1fr;
+    //     margin-top: 22px;
+    // }
 
     & ul {
         padding: 0px;
@@ -32,9 +33,15 @@
         height: 50px;
         align-items: center;
 
+        opacity: 0;
+
         &:hover {
             font-weight: bold;
             font-size: 25px;
+        }
+
+        &.onShowen{
+            opacity: 1 !important;
         }
 
 
@@ -46,17 +53,23 @@
 }
 
 .header-song-list {
-    grid-template-columns: 1fr 20fr 5fr 5fr 1fr 5.5fr 1fr;
+    grid-template-columns: 1fr 15fr 9fr 5fr 1fr 5.5fr 1fr;
+    height: 30px;
+    margin-top: 19px;
+    font-size: 13px;
 }
 
 .song-list-li {
     margin-top: 27px;
-    grid-template-columns: 1.4fr 20fr 5fr 5fr 1fr 5.5fr 1fr;
+    grid-template-columns: 1fr 15fr 9fr 5fr 1fr 5.5fr 1fr;
+    color: $txtfill
 
-
-    // &:hover {}
+   
+    
 }
-
+.song-list-add-date{
+    margin-left: 13px
+}
 .song-details{
     display: flex;
     align-items: center;
