--- a/frontend/src/assets/styles/cmps/_song-list.scss
+++ b/frontend/src/assets/styles/cmps/_song-list.scss
@@ -1,51 +1,51 @@
 .song-list-container {
     margin-top: 32px;
     padding-left: 43px;
-    background-color: inherit; 
-    // background-image: linear-gradient(rgb(5, 5, 20),black);
-
-
-    // &.header-song-list {
-    //     // grid-template-columns: 3fr 20fr 5fr 5fr 7.5fr;
-
-    //     font-size: calc(13px);
-    //     grid-template-columns: 1fr 15fr 9fr 5fr 1fr 5.5fr 1fr;
-    //     margin-top: 22px;
-    // }
-
+    background-color: inherit;
     & ul {
         padding: 0px;
     }
-
     & .song-details {
         &:hover {
             text-decoration: underline;
             cursor: pointer;
         }
     }
-
     & .song-action {
         background-color: transparent;
-        color: white;
         font-size: 20px;
-        color: white;
+
+        color: transparent;
+        fill: transparent;
+
         width: 50px;
         height: 50px;
         align-items: center;
-
-        opacity: 0;
-
+        // opacity: 0;
         &:hover {
             font-weight: bold;
             font-size: 25px;
         }
-
-        &.onShowen{
-            opacity: 1 !important;
-        }
-
-
     }
+    .song-list-li {
+        margin-top: 27px;
+        grid-template-columns: 1fr 15fr 9fr 5fr 1fr 5.5fr 1fr;
+
+        color: $txtfill
+    }
+
+}
+
+song-list-li:hover {
+    color: blue;
+    opacity: 1;
+
+
+    &.song-action {
+        color: white;
+        fill: white;
+    }
+
 }
 
 .song-liked-svg {
@@ -59,17 +59,15 @@
     font-size: 13px;
 }
 
-.song-list-li {
-    margin-top: 27px;
-    grid-template-columns: 1fr 15fr 9fr 5fr 1fr 5.5fr 1fr;
-    color: $txtfill 
+
+
+
+
+.song-list-add-date {
+    margin-left: 14px
 }
 
-.song-list-add-date{
-    margin-left: 13px
-}
-
-.song-details{
+.song-details {
     display: flex;
     align-items: center;
     gap: 0px 15px;
@@ -81,12 +79,12 @@
 
     }
 
-    .song-info{
+    .song-info {
         display: flex;
         flex-direction: column;
 
     }
-    
+
     .btn-song-title-play {
         all: unset;
 
@@ -96,7 +94,7 @@
         }
     }
 
-    .song-list-artist{
+    .song-list-artist {
         margin-top: -10px;
     }
 
