--- a/frontend/src/assets/styles/cmps/_song-list.scss
+++ b/frontend/src/assets/styles/cmps/_song-list.scss
@@ -2,31 +2,31 @@
     margin-top: 32px;
     padding-left: 43px;
     background-color: inherit;
+
     & ul {
         padding: 0px;
     }
+
     & .song-details {
         &:hover {
             text-decoration: underline;
             cursor: pointer;
         }
     }
+
     & .song-action {
         background-color: transparent;
-        font-size: 20px;
-
-        color: transparent;
-        fill: transparent;
 
         width: 50px;
         height: 50px;
         align-items: center;
+
         // opacity: 0;
         &:hover {
             font-weight: bold;
-            font-size: 25px;
         }
     }
+
     .song-list-li {
         margin-top: 27px;
         grid-template-columns: 1fr 15fr 9fr 5fr 1fr 5.5fr 1fr;
@@ -37,9 +37,7 @@
 }
 
 song-list-li:hover {
-    color: blue;
-    opacity: 1;
-
+    opacity: 1; //not working
 
     &.song-action {
         color: white;
@@ -52,6 +50,11 @@ song-list-li:hover {
     fill: $bgcplay;
 }
 
+.song-remove-icon {
+    fill: $bgcplay;
+    font-size: 17px;
+}
+
 .header-song-list {
     grid-template-columns: 1fr 15fr 9fr 5fr 1fr 5.5fr 1fr;
     height: 30px;
@@ -60,11 +63,14 @@ song-list-li:hover {
 }
 
 
-
+.song-list-duration {
+    margin-top: 13px;
+}
 
 
 .song-list-add-date {
-    margin-left: 14px
+    margin-left: 14px;
+    margin-top: 13px;
 }
 
 .song-details {
