--- a/frontend/src/assets/styles/cmps/_station-details.scss
+++ b/frontend/src/assets/styles/cmps/_station-details.scss
@@ -7,7 +7,8 @@
     border: 0;
     padding-top: 17px;
     vertical-align: baseline;
-    background-image: linear-gradient(rgb(26, 26, 172), black);
+    background-image: linear-gradient(rgb(26, 26, 172), #121212);
+    // z-index: 2;
 }
 
 .top-container {
