--- a/frontend/src/assets/styles/cmps/_app-player.scss
+++ b/frontend/src/assets/styles/cmps/_app-player.scss
@@ -5,7 +5,7 @@
     bottom: 0;
     justify-content: space-between;
     width: 100%;
-    border-top: 0.5px gray solid;
+    border-top: 0.1px rgb(61, 61, 61) solid;
 }
 
 .icon-player {
