--- a/frontend/src/assets/styles/cmps/_app-navbar.scss
+++ b/frontend/src/assets/styles/cmps/_app-navbar.scss
@@ -13,24 +13,25 @@
 
 ul {
     list-style-type: none;
-    
-    
     a {
         display: flex;
         align-items: center;
         color: $txtfill;
-
-
+        
         &:hover {
             color: $txtselected;
         }
-        
+        &:active {
+            color: $txtselected;
+        }
+
     }
 
     &.nav-bar {
         padding-left: rem(25px);
         padding-top: 0.75em;
     }
+
 }
 
 .nav-list-seperator {
@@ -79,15 +80,13 @@ svg {
     justify-content: center;
     align-items: center;
 
-    
-
     &-logo {
         font-size: rem(25px);
 
-        a{
+        a {
             color: $txtselected;
         }
-        
+
         .logo-img {
             height: rem(38px);
             width: rem(38px);
@@ -97,6 +96,7 @@ svg {
             margin-right: rem(5px);
         }
     }
+
 }
 
 span {
@@ -122,7 +122,7 @@ span {
     padding-left: rem(25px);
     font-size: 0.8em;
 
-    .user-station-list-link{
-        margin-bottom: 1.3em;  
+    .user-station-list-link {
+        margin-bottom: 1.3em;
     }
 }
