--- a/frontend/src/assets/styles/cmps/_app-navbar.scss
+++ b/frontend/src/assets/styles/cmps/_app-navbar.scss
@@ -14,6 +14,13 @@
 
 ul {
     list-style-type: none;
+    li{
+        a.active{
+
+            color: $txtselected;
+        }
+        
+    }
     a {
         display: flex;
         align-items: center;
@@ -22,7 +29,8 @@ ul {
         &:hover {
             color: $txtselected;
         }
-        &:active {
+        
+        li:active {
             color: $txtselected;
         }
 
